Revert "CSS - player overflow-x not allowed for Firefox copy text issues - part 2"
This reverts commit fc1b7c0818219aa33bd03c72797fda2818ce600f.

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -349,7 +349,6 @@
   max-height: 100%;
   overflow-x: hidden;
   overflow-y: visible;
-  scrollbar-width: none;
   border-radius: .24em;
   background-position: center;
   background-repeat: no-repeat;
